[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qianli"
version = "0.2.0"
description = "Search Chinese content platforms (WeChat, 36kr, XHS, Zhihu) via Chrome DevTools Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Terry Li", email = "terry@terryli.dev" }]
keywords = ["chinese", "search", "wechat", "xiaohongshu", "zhihu", "cdp", "chrome"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["websockets>=13"]

[project.urls]
Homepage = "https://github.com/terry-li-hm/qianli"
Repository = "https://github.com/terry-li-hm/qianli"

[project.scripts]
qianli = "qianli.cli:main"
